infra/service.tf
resource "aws_ecs_service" "app" {
  name            = "rag-qa-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets          = data.aws_subnets.default.ids
    security_groups  = [aws_security_group.task.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.main.arn
    container_name   = "rag-qa"
    container_port   = 8000
  }

  depends_on = [aws_lb_listener.http]
}
